Fix profile hidden behind form

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -47,6 +47,7 @@
 		position: absolute;
 		top: .5rem;
 		right: 2.5%;
+		z-index: 1; // float above the form
 		@media (min-width: 42.5em) {
 			right: 5%;
 		}
